# jai

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: MVP_руководство_процесс_Linux_Windows.html  README.md  jai_дизайн_макет.html  Инженерный_отчёт_финальный.html  Фаза_B_отчёт_по_заданию.md
src/: main.ts  markdown-it-texmath.d.ts  markdown.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chunk.rs  docstore.rs  embed.rs  engine.rs  lib.rs  main.rs
