[package]
name = "jai"
version = "0.1.0"
description = "Боксовый офлайн ИИ-ассистент (jai)"
authors = ["baryshevshot1"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP-клиент для разговора с Ollama. default-features = false ⇒ без TLS:
# ходим только на http://127.0.0.1, а отказ от TLS убирает зависимость от
# системного OpenSSL и упрощает сборку под Linux/Windows в CI.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# Системная информация (RAM, число ядер) — кроссплатформенно, без сети.
sysinfo = "0.33"
# Извлечение текста из документов (Фаза A). Чистый Rust (без C/Python), MIT/Apache-2.0.
# zip: только deflate (miniz_oxide), чтобы не тянуть C-крейты bzip2/zstd.
pdf-extract = "0.12"
quick-xml = "0.40"
zip = { version = "8", default-features = false, features = ["deflate"] }
tauri-plugin-dialog = "2"

# Определение видеопамяти на Windows через DXGI (DedicatedVideoMemory).
# Только под Windows — на Mac/Linux этот крейт не собирается.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi", "Win32_Foundation"] }

